--- a/index.html
+++ b/index.html
@@ -1,34 +1,134 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<head>
+  <!-- Meta tags Obrigatórias -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="Paulo_Vitor_Guedes">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+  <!-- HTML5Shiv -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <!-- Estilo customizado -->
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+  <!-- Estilo customizado -->
+  <link rel="stylesheet" type="text/css" href="_css/style.css">
 
-    <title>Música para todos - Spotify</title>
-  </head>
-  <body>
-    
-    <h1>Olá, mundo!</h1>
+  <link rel="icon" href="_img/mfavicin.jpg">
+  <title>MyMusicFy - Curta o som</title>
+</head>
 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+<body>
+
+  <header>
+
+    <nav class="navbar navbar-expand-lg navbar-transparente fixed-top pr-5">
+
+      <!-- Apresentação da logo -->
+      <div class="row justify-content-start pl-5">
+        <div class="col-3 p-0">
+          <a id="logo" class="navbar-brand w-100" href="#">
+            <img src="_img/logo_mmfsbg.png" alt="logo.png">
+          </a>
+        </div>
+
+        <div class="col-6 align-self-center p-0">
+          <a href="#">
+            <h1 id="logo" class="text-white ">MyMusicFy</h1>
+          </a>
+        </div>
+      </div>
+
+
+      <!-- Menu Hamburguer 
+          data-toggle="collapse" =apresentar o conteudo ao ser clicado
+          data-target="#ID" indica o qual conteudo será apresentado após o clic buscando seu id-->
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao-topo">
+        <!-- Icone Hamburger -->
+        <i class="fas fa-bars text-white"></i>
+      </button>
+
+      <!-- Menu navegacao 
+          "colapse" = esconde os itens de navegação ao atingir navbar-expand-sm
+          "navbar-collapse" = Faz expandir os itens na parte inferior do icon hamburger-->
+      <div class="collapse navbar-collapse" id="navegacao-topo">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Premium</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Ajuda</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Baixar</a>
+          </li>
+          <li class="nav-item divisor">
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Inscreva-se</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Entrar</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+
+
+  <!-- Apresentação Capa -->
+  <section id="home" class="d-flex">
+
+    <div class="container align-self-center">
+      <div class="row">
+        <div class="col-md-12 capa">
+          <h1>Seu novo estilo de música</h1>
+          <a href="#" class="btn btn-lg btn-custom btn-roxo">Aproveite o MyMusicFy Free</a>
+          <a href="#" class="btn btn-lg btn-custom btn-branco">Obtenha o MyMusicFy Premium</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          
+        </div>
+        <div class="col-md-6">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+  <!-- JavaScript (Opcional) -->
+  <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
