--- a/index.html
+++ b/index.html
@@ -100,16 +100,55 @@
     </div>
   </section>
 
-
-  <section>
+  <!-- Apresentação serviços -->
+  <section id="servicos">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        
+        <div class="col-md-6"> <!--lado esquedo com imagens -->
           
-        </div>
-        <div class="col-md-6">
 
-        </div>
+          <div class="row"><!--Primeira linha de imagens-->
+            <div class="col-md-6 albuns">
+              <img src="_img/img1.jpg" alt="disco1" class="img-fluid">
+            </div>
+
+            <div class="col-md-6 albuns">
+              <img src="_img/img2.jpg" alt="disco2" class="img-fluid">
+            </div>
+          </div> <!--FIM Primeira linha de imagens-->
+
+
+
+          <div class="row"><!--Segunda linha de imagens-->
+            <div class="col-md-6 albuns">
+              <img src="_img/img3.jpg" alt="disco3" class="img-fluid">
+            </div>
+
+            <div class="col-md-6 albuns">
+              <img src="_img/img4.jpg" alt="disco4" class="img-fluid">
+            </div>
+          </div> <!--FIM Segunda linha de imagens-->
+
+
+
+        </div> <!-- FIM lado esquedo com imagens -->
+
+
+
+        <div class="col-md-6"> <!--lado direito com conteudo -->
+
+          <h2>O que o MyMusicFy tem?</h2>
+          <h3>Músicas</h3>
+          <p>O MyMusicFy tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+          <h3>Playlists</h3>
+          <p>No MyMusicFy você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+
+          <h3>Novos lançamentos</h3>
+          <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
+
+        </div> <!--FIM lado direito com conteudo -->
       </div>
     </div>
   </section>
