final ajuste serviços

--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
   <section id="servicos">
     <div class="container">
       <div class="row">
-        
+
         <div class="col-md-6"> <!--lado esquedo com imagens -->
           
 
           <div class="row"><!--Primeira linha de imagens-->
             <div class="col-md-6 albuns">
-              <img src="_img/img1.jpg" alt="disco1" class="img-fluid">
+              <img src="_img/img1.jpg" alt="disco1" class="img-fluid d-none d-md-block">
             </div>
 
             <div class="col-md-6 albuns">
-              <img src="_img/img2.jpg" alt="disco2" class="img-fluid">
+              <img src="_img/img2.jpg" alt="disco2" class="img-fluid d-none d-md-block">
             </div>
           </div> <!--FIM Primeira linha de imagens-->
 
@@ -122,7 +122,7 @@
 
           <div class="row"><!--Segunda linha de imagens-->
             <div class="col-md-6 albuns">
-              <img src="_img/img3.jpg" alt="disco3" class="img-fluid">
+              <img src="_img/img3.jpg" alt="disco3" class="img-fluid d-none d-md-block">
             </div>
 
             <div class="col-md-6 albuns">
