--- a/index.html
+++ b/index.html
@@ -31,35 +31,25 @@
 
   <header>
 
-    <nav class="navbar navbar-expand-lg navbar-transparente fixed-top pr-5">
+    <nav class="navbar navbar-expand-md navbar-transparente fixed-top">
 
       <!-- Apresentação da logo -->
-      <div class="row justify-content-start pl-5">
-        <div class="col-3 p-0">
-          <a id="logo" class="navbar-brand w-100" href="#">
-            <img src="_img/logo_mmfsbg.png" alt="logo.png">
-          </a>
-        </div>
-
-        <div class="col-6 align-self-center p-0">
-          <a href="#">
-            <h1 id="logo" class="text-white ">MyMusicFy</h1>
-          </a>
-        </div>
-      </div>
-
+      <a id="logo" class="navbar-brand" href="#">
+        <img src="_img/logo_mmfsbg.png" alt="logo.png">
+        <span class="text-white logo">MyMusicFy</span>
+      </a>
 
       <!-- Menu Hamburguer 
-          data-toggle="collapse" =apresentar o conteudo ao ser clicado
-          data-target="#ID" indica o qual conteudo será apresentado após o clic buscando seu id-->
+            data-toggle="collapse" =apresentar o conteudo ao ser clicado
+            data-target="#ID" indica o qual conteudo será apresentado após o clic buscando seu id-->
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao-topo">
         <!-- Icone Hamburger -->
         <i class="fas fa-bars text-white"></i>
       </button>
 
       <!-- Menu navegacao 
-          "colapse" = esconde os itens de navegação ao atingir navbar-expand-sm
-          "navbar-collapse" = Faz expandir os itens na parte inferior do icon hamburger-->
+      "colapse" = esconde os itens de navegação ao atingir navbar-expand-sm
+      "navbar-collapse" = Faz expandir os itens na parte inferior do icon hamburger-->
       <div class="collapse navbar-collapse" id="navegacao-topo">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -105,10 +95,12 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-md-6"> <!--lado esquedo com imagens -->
-          
+        <div class="col-md-6">
+          <!--lado esquedo com imagens -->
 
-          <div class="row"><!--Primeira linha de imagens-->
+
+          <div class="row">
+            <!--Primeira linha de imagens-->
             <div class="col-md-6 albuns">
               <img src="_img/img1.jpg" alt="disco1" class="img-fluid d-none d-md-block">
             </div>
@@ -116,11 +108,13 @@
             <div class="col-md-6 albuns">
               <img src="_img/img2.jpg" alt="disco2" class="img-fluid d-none d-md-block">
             </div>
-          </div> <!--FIM Primeira linha de imagens-->
+          </div>
+          <!--FIM Primeira linha de imagens-->
 
 
 
-          <div class="row"><!--Segunda linha de imagens-->
+          <div class="row">
+            <!--Segunda linha de imagens-->
             <div class="col-md-6 albuns">
               <img src="_img/img3.jpg" alt="disco3" class="img-fluid d-none d-md-block">
             </div>
@@ -128,7 +122,8 @@
             <div class="col-md-6 albuns">
               <img src="_img/img4.jpg" alt="disco4" class="img-fluid">
             </div>
-          </div> <!--FIM Segunda linha de imagens-->
+          </div>
+          <!--FIM Segunda linha de imagens-->
 
 
 
@@ -136,25 +131,126 @@
 
 
 
-        <div class="col-md-6"> <!--lado direito com conteudo -->
+        <div class="col-md-6">
+          <!--lado direito com conteudo -->
 
           <h2>O que o MyMusicFy tem?</h2>
           <h3>Músicas</h3>
-          <p>O MyMusicFy tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+          <p>O MyMusicFy tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus
+            favoritos em um só lugar.</p>
 
           <h3>Playlists</h3>
-          <p>No MyMusicFy você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+          <p>No MyMusicFy você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da
+            música.</p>
 
           <h3>Novos lançamentos</h3>
           <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
 
-        </div> <!--FIM lado direito com conteudo -->
+        </div>
+        <!--FIM lado direito com conteudo -->
       </div>
     </div>
   </section>
 
 
 
+
+  <!-- Apresentação recurços -->
+  <section id="recursos">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-4">
+          <!--Lado esquerdo com os textos-->
+          <h2>Fácil</h2>
+          <h3>Buscar</h3>
+          <p>Já sabe o que quer escutar? é só procurar e apertar o play.</p>
+
+          <h3>Navegar</h3>
+          <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+          <h3>Descobrir</h3>
+          <p>Curta múdicas novas todos os Sábados com uma playlist personalizada para você. Ou relaxa e curta uma das
+            nossas rádios</p>
+        </div>
+
+
+        <div class="col-md-8">
+          <!--Lado direito com as imagens-->
+          <div class="container">
+            <div class="row rotacionar">
+
+              <div class="col-md-6">
+                <img src="_img/iphone1.png" alt="iphone1" class="img-fluid d-none d-md-block">
+              </div>
+
+              <div class="col-md-6">
+                <img src="_img/iphone2.png" alt="iphone2" class="img-fluid d-none d-md-block">
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </section>
+
+
+  <footer>
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-2 caixa_logo_footer">
+          <img class="img-fluid ml-lg-4 logofooter" src="_img/logo_mmfsbg.png" alt="logofooter">
+          <span class="logo">MyMusicFy</span>
+        </div>
+
+        <div class="col-lg-2">
+          <h4>Company</h4>
+          <ul class="navbar-nav">
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Empregos</a></li>
+            <li><a href="#">Imprensa</a></li>
+            <li><a href="#">Novidades</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2">
+          <h4>Comunidades</h4>
+          <ul class="navbar-nav">
+            <li><a href="#">Artistas</a></li>
+            <li><a href="#">Desenvolvedores</a></li>
+            <li><a href="#">Marcas</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2">
+          <h4>Links Uteis</h4>
+          <ul class="navbar-nav">
+            <li><a href="#">Ajuda</a></li>
+            <li><a href="#">Presentes</a></li>
+            <li><a href="#">Player da web</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-4">
+          <ul>
+            <li>
+              <a href="#"><img src="_img/facebook.png" alt="facebook"></a>
+            </li>
+            <li>
+              <a href="#"><img src="_img/twitter.png" alt="twitter"></a>
+            </li>
+            <li>
+              <a href="#"><img src="_img/instagram.png" alt="instagram"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
   <!-- JavaScript (Opcional) -->
