--- a/index.html
+++ b/index.html
@@ -82,9 +82,40 @@
     <div class="container align-self-center">
       <div class="row">
         <div class="col-md-12 capa">
-          <h1>Seu novo estilo de música</h1>
-          <a href="#" class="btn btn-lg btn-custom btn-roxo">Aproveite o MyMusicFy Free</a>
-          <a href="#" class="btn btn-lg btn-custom btn-branco">Obtenha o MyMusicFy Premium</a>
+
+          <!--Div Carousel-->
+          <div id="carousel-mmf" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+
+              <div class="carousel-item active">
+                <h1>Seu novo estilo de música</h1>
+                <a href="#" class="btn btn-lg btn-custom btn-roxo">Aproveite o MyMusicFy Free</a>
+                <a href="#" class="btn btn-lg btn-custom btn-branco">Obtenha o MyMusicFy Premium</a>
+              </div>
+              <!--Div item-->
+
+              <div class="carousel-item">
+                <h1>As melhores rádios</h1>
+                <a href="#" class="btn btn-lg btn-custom btn-outline-light">
+                  <i class="fa fa-music"></i> Ouça agora mesmo
+                </a>
+              </div>
+              <!--Div item-->
+
+            </div>
+            <!--Div inner-->
+
+            <!-- Controles -->
+            <a href="#carousel-mmf" class="carousel-control-prev" data-slide="prev">
+              <i class="fas fa-angle-left fa-3x"></i>
+            </a>
+
+            <a href="#carousel-mmf" class="carousel-control-next" data-slide="next">
+              <i class="fas fa-angle-right fa-3x"></i>
+            </a>
+          </div>
+          <!--Div carousel slide-->
+
         </div>
       </div>
     </div>
